# swig-testing

./: .gitmodules  CMakeLists.txt
bind/: CMakeLists.txt  bind.i
lib/: CMakeLists.txt
lib/mylib/: CMakeLists.txt
lib/mylib/src/: CMakeLists.txt  api.cxx  api.hxx  bind.cmake  bind.i  myclass.cxx  myclass.hxx
lib/mylib/test/: CMakeLists.txt  test_api.cxx  test_myclass.cxx
src/: CMakeLists.txt  main.cs
